--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,39 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@font-face {
+  font-family: 'IBM Plex Sans';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: optional;
+  src: url(/fonts/ibm-plex-sans-var.woff2) format('woff2');
+}
+::selection {
+  background-color: #47a3f3;
+  color: #fefefe;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  min-width: 360px;
+  scroll-behavior: smooth;
 }
-
-* {
-  box-sizing: border-box;
+*{
+  max-width: 100%;
+}
+.root,
+#root,
+#docs-root {
+  --bg-color: theme("colors.background.50")
+  --fg-color: theme("colors.main.700")
+}
+.dark-mode {
+  --bg-color: theme("colors.background.800")
+  --fg-color: theme("colors.main.100")
+}
+.notion {
+  font-family: inherit;
+}
+.notion-viewport{
+  display: none;
 }
