fix the code styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,6 +66,10 @@ p a {
   background-color: rgba(17, 24, 39, 1);
   border-color: rgba(55, 65, 81, 1);
 }
+.notion-aside{
+  position: absolute;
+  right: -50%;
+}
 .notion code {
   color: rgba(31, 41, 55, 1);
   border: 0 none !important;
