✨ Add Image enlarger

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,7 @@ p a {
 
 .notion-header {
   padding: 0;
+  z-index: 40;
   @apply bg-background-100 bg-opacity-50 dark:bg-background-900 
     dark:bg-opacity-50;
 }
